2022-01-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/audio_raw_stream.rb: Added

2022-01-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* raylib_dll/build_raylib_macos.sh: Stop copying symbolic links

2022-01-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_animation.rb: Added

2022-01-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_opengl_interop.rb: Use opengl-bindings2
	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/549ca669aa42462662a610ff240aa4d5736240e5 ) and raygui ( https://github.com/raysan5/raygui/commit/c7eb9268535298ee25be90739c86d1be215f53e5 )

2022-01-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* raylib-bindings.gemspec: Bump version

2021-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* BoundingBox.create (lib/raylib.rb): Fixed wrong implementation

2021-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/procedural_texture.rb: Added

2021-12-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/shaders_raymarching.rb: Added

2021-12-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_rectangle_bounds.rb: Added

2021-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_draw_3d.rb: Added

2021-12-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_mesh_picking.rb: Added
	* examples/text_font_filters.rb: Added
	* examples/utf8_font.rb: Modified to use texture filter
	* examples/textures_mouse_painting.rb: Added

2021-12-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_mesh_generation.rb: Added
	* examples/utf8_font.rb: Added another font
	* examples/core_3d_split_screen.rb: Added
	* examples/core_world_screen.rb: Added
	* examples/models_yaw_pitch_roll.rb: Added

2021-12-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* raylib_parser.py: Typo
	* Python cindex reports va_list as int on macOS
	* examples/models_loading_gltf.rb: Added
