@@ -196,8 +196,8 @@ module Raylib
       :GuiWindowBox => [Rectangle.by_value, :pointer],
       :GuiGroupBox => [Rectangle.by_value, :pointer],
       :GuiLine => [Rectangle.by_value, :pointer],
-      :GuiPanel => [Rectangle.by_value, :pointer],
-      :GuiScrollPanel => [Rectangle.by_value, :pointer, Rectangle.by_value, :pointer],
+      :GuiPanel => [Rectangle.by_value],
+      :GuiScrollPanel => [Rectangle.by_value, Rectangle.by_value, :pointer],
       :GuiLabel => [Rectangle.by_value, :pointer],
       :GuiButton => [Rectangle.by_value, :pointer],
       :GuiLabelButton => [Rectangle.by_value, :pointer],
@@ -221,10 +221,10 @@ module Raylib
       :GuiListViewEx => [Rectangle.by_value, :pointer, :int, :pointer, :pointer, :int],
       :GuiMessageBox => [Rectangle.by_value, :pointer, :pointer, :pointer],
       :GuiTextInputBox => [Rectangle.by_value, :pointer, :pointer, :pointer, :pointer],
-      :GuiColorPicker => [Rectangle.by_value, :pointer, Color.by_value],
-      :GuiColorPanel => [Rectangle.by_value, :pointer, Color.by_value],
-      :GuiColorBarAlpha => [Rectangle.by_value, :pointer, :float],
-      :GuiColorBarHue => [Rectangle.by_value, :pointer, :float],
+      :GuiColorPicker => [Rectangle.by_value, Color.by_value],
+      :GuiColorPanel => [Rectangle.by_value, Color.by_value],
+      :GuiColorBarAlpha => [Rectangle.by_value, :float],
+      :GuiColorBarHue => [Rectangle.by_value, :float],
       :GuiLoadStyle => [:pointer],
       :GuiLoadStyleDefault => [],
       :GuiIconText => [:int, :pointer],
